2.32/reference/config_files/profiles.html.md
<a id="reference-config-files-profiles"></a>

# profiles

## Introduction to profiles

Conan profiles allow users to set a complete configuration set for **settings**, **options**,
**environment variables** (for build time and runtime context), **tool requirements**, and
**configuration variables** in a file.

They have this structure:

```text
[settings]
arch=x86_64
build_type=Release
os=Macos

[options]
mylib/*:shared=True

[tool_requires]
tool1/0.1@user/channel
*: tool4/0.1@user/channel

[buildenv]
VAR1=value

[runenv]
EnvironmentVar1=My Value

[conf]
tools.build:jobs=2

[replace_requires]
zlib/1.2.12: zlib/[*]

[replace_tool_requires]
7zip/*: 7zip/system

[platform_requires]
dlib/1.3.22

[platform_tool_requires]
cmake/3.24.2
```

Profiles can be created with the `detect` option in [conan profile](https://docs.conan.io/2//reference/commands/profile.html.md#reference-commands-profile) command,
and edited later. If you don’t specify a *name*, the command will create the `default` profile:

```bash
$ conan profile detect
apple-clang>=13, using the major as version
Detected profile:
[settings]
arch=x86_64
build_type=Release
compiler=apple-clang
compiler.cppstd=gnu17
compiler.libcxx=libc++
compiler.version=14
os=Macos

WARN: This profile is a guess of your environment, please check it.
WARN: Defaulted to cppstd='gnu17' for apple-clang.
WARN: The output of this command is not guaranteed to be stable and can change in future Conan versions.
WARN: Use your own profile files for stability.
Saving detected profile to [CONAN_HOME]/profiles/default
```

#### NOTE
**A note about the detected C++ standard by Conan**

Conan will always set the default C++ standard as the one that the detected compiler
version uses by default, except for the case of macOS using apple-clang. In this case,
for apple-clang>=11, it sets `compiler.cppstd=gnu17`. If you want to use a different
C++ standard, you can edit the default profile file directly.

```bash
$ conan profile detect --name myprofile
Found apple-clang 14.0
apple-clang>=13, using the major as version
Detected profile:
[settings]
arch=x86_64
build_type=Release
compiler=apple-clang
compiler.cppstd=gnu17
compiler.libcxx=libc++
compiler.version=14
os=Macos

WARN: This profile is a guess of your environment, please check it.
WARN: Defaulted to cppstd='gnu17' for apple-clang.
WARN: The output of this command is not guaranteed to be stable and can change in future Conan versions.
WARN: Use your own profile files for stability.
Saving detected profile to [CONAN_HOME]/profiles/myprofile
```

Profile files can be used with `-pr`/`--profile` option in many commands like **conan install** or
**conan create** commands. If you don’t specify any profile at all, the `default` profile will be
always used:

```bash
$ conan create .
```

```bash
$ conan create . -pr=myprofile
```

Profile files can have comments, but only in new lines, with the first character being `#`, trailing comments are not supported:

```text
[settings]
# Valid comment
arch=x86_64
build_type=Release  # INVALID comment, do not use
```

<a id="reference-config-files-profiles-using-profiles"></a>

## Using profiles

Profiles can be located in different folders:

```bash
$ conan install . -pr /abs/path/to/myprofile   # abs path
$ conan install . -pr ./relpath/to/myprofile   # resolved to current dir
$ conan install . -pr ../relpath/to/myprofile  # resolved to relative dir
$ conan install . -pr myprofile  # resolved to [CONAN_HOME]/profiles/myprofile
```

Listing existing profiles in the *profiles* folder can be done like this:

```bash
$ conan profile list
Profiles found in the cache:
default
myprofile1
myprofile2
...
```

You can also show the profile’s content per context:

```bash
$ conan profile show -pr myprofile
Host profile:
[settings]
arch=x86_64
build_type=Release
compiler=apple-clang
compiler.cppstd=gnu17
compiler.libcxx=libc++
compiler.version=14
os=Macos

Build profile:
[settings]
arch=x86_64
build_type=Release
compiler=apple-clang
compiler.cppstd=gnu17
compiler.libcxx=libc++
compiler.version=14
os=Macos
```

#### SEE ALSO
- Manage your profiles and share them using [conan config install](https://docs.conan.io/2//reference/commands/config.html.md#reference-commands-conan-config-install).
- Check the command and its sub-commands of [conan profile](https://docs.conan.io/2//reference/commands/profile.html.md#reference-commands-profile).

## Profile sections

These are the available sections in profiles:

### [settings]

List of settings available from [settings.yml](https://docs.conan.io/2//reference/config_files/settings.html.md#reference-config-files-settings-yml):

```text
[settings]
arch=x86_64
build_type=Release
compiler=apple-clang
compiler.cppstd=gnu17
compiler.libcxx=libc++
compiler.version=14
os=Macos
```

#### SEE ALSO
- This section allows to use patterns to limit which packages are affected by the setting. See [this section](#reference-config-files-profile-patterns) for more details.

### [options]

List of options available from your recipe and its dependencies:

```text
[options]
mypkg/*:my_pkg_option=True
*:shared=True
```

#### SEE ALSO
- This section allows to use patterns to limit which packages are affected by the options. See [this section](#reference-config-files-profile-patterns) for more details.

<a id="reference-config-files-profiles-tool-requires"></a>

### [tool_requires]

List of `tool_requires` required by your recipe or its dependencies:

```text
[tool_requires]
cmake/3.25.2
```

#### SEE ALSO
- This section allows to use patterns to limit which packages are affected by the tool requirement. See [this section](#reference-config-files-profile-patterns) for more details.
- Read more about tool requires in this section: [Using build tools as Conan packages](https://docs.conan.io/2//tutorial/consuming_packages/use_tools_as_conan_packages.html.md#consuming-packages-tool-requires).

<a id="reference-config-files-profiles-system-tools"></a>

### [system_tools] (DEPRECATED)

#### NOTE
This section is **deprecated** and has been replaced by [[platform_requires]](#reference-config-files-profiles-platform-requires) and [[platform_tool_requires]](#reference-config-files-profiles-platform-tool-requires) sections.

<a id="reference-config-files-profiles-buildenv"></a>

### [buildenv]

List of environment variables that will be injected to the environment every time the ConanFile
`run(cmd, env="conanbuild")` method is invoked (build time context is automatically run by [VirtualBuildEnv](https://docs.conan.io/2//reference/tools/env/virtualbuildenv.html.md#conan-tools-env-virtualbuildenv)).

Besides that, it is able to apply some additional operators to each variable declared
when you’re composing profiles or even local variables:

* `+=` == `append`: appends values at the end of the existing value.
* `=+` == `prepend`: puts values at the beginning of the existing value.
* `=!` == `unset`: gets rid of any variable value.

Note that it is different to define an empty variable, like `MyVar1=`, which defines it with a value of an empty string,
that requesting it to be explicitly unset with the `MyVar1=!` syntax.

Another essential point to mention is the possibility of defining variables as PATH ones by simply putting `(path)` as
the prefix of the variable. It is useful to automatically get the append/prepend of the PATH in different systems
(Windows uses `;` as separation, and UNIX `:`).

```text
[buildenv]
# Define a variable "MyVar1"
MyVar1=My Value; other

# Append another value to "MyVar1"
MyVar1+=MyValue12

# Define a variable with an empty string value
MyVar2=

# Define a PATH variable "MyPath1"
MyPath1=(path)/some/path11

# Prepend another PATH to "MyPath1"
MyPath1=+(path)/other path/path12

# Unset the variable "MyPath2"
MyPath2=!
```

Then, the result of applying this profile is:

* `MyVar1`: `My Value; other MyValue12`
* `MyVar2`: An empty string value
* `MyPath1`:
  : * Unix: `/other path/path12:/some/path11`
    * Windows: `/other path/path12;/some/path11`
* `MyPath2`: if system environment had defined `MyPath2`, this will be unset by Conan

#### WARNING
Note that `[buildenv]` and `[runenv]` environment variables definition keeps
user blank spaces in values. `MYVAR = MyValue` will produce a `" MyValue"` value, which
will be different than `MYVAR=MyValue` that will produce `"MyValue"`. avoid
using extra spaces around `=` in profiles, use the syntax shown above.

#### SEE ALSO
- This section allows to use patterns to limit which packages are affected by the buildenv. See [this section](#reference-config-files-profile-patterns) for more details.

For example:

```text
[buildenv]
MyPath=MyValue
mypkg/*:MyPath=MyOtherValue
```

This will result in `MyPath=MyValue` for all the packages, and `MyPath=MyOtherValue` only for the `mypkg` package.

<a id="reference-config-files-profiles-runenv"></a>

### [runenv]

List of environment variables that will be injected to the environment every time the ConanFile
`run(cmd, env="conanrun")` method is invoked (runtime context is automatically run by [VirtualRunEnv](https://docs.conan.io/2//reference/tools/env/virtualrunenv.html.md#conan-tools-env-virtualrunenv)).

All the operators/patterns explained for [[buildenv]](#reference-config-files-profiles-buildenv) applies to this one in the same way:

```text
[runenv]
MyVar1=My Value; other
MyVar1+=MyValue12
MyPath1=(path)/some/path11
MyPath1=+(path)/other path/path12
MyPath1=!
```

#### SEE ALSO
- This section allows to use patterns to limit which packages are affected by the runenv. See [this section](#reference-config-files-profile-patterns) for more details.

<a id="reference-config-files-profiles-conf"></a>

### [conf]

#### NOTE
It’s recommended to have previously read the [global.conf](https://docs.conan.io/2//reference/config_files/global_conf.html.md#reference-config-files-global-conf) section.

List of user/tools configurations:

```text
[conf]
tools.build:verbosity=verbose
tools.microsoft.msbuild:max_cpu_count=2
tools.microsoft.msbuild:vs_version = 16
tools.build:jobs=10
# User conf variable
user.confvar:something=False
```

Recall some hints about configuration scope and naming:

- `core.xxx` configuration can only be defined in `global.conf` file, but not in profiles
- `tools.yyy` and `user.zzz` can be defined in `global.conf` and they will affect both the “build” and the “host” context. But configurations defined in a profile `[conf]` will only affect the respective “build” or “host” context of the profile, not both.

They can also be used in [global.conf](https://docs.conan.io/2//reference/config_files/global_conf.html.md#reference-config-files-global-conf),
but **profiles values will have priority over globally defined ones in global.conf**, so let’s see an example that is a bit more complex,
trying different configurations coming from the *global.conf* and another profile *myprofile*:

```text
# Defining several lists
user.myconf.build:ldflags=["--flag1 value1"]
user.myconf.build:cflags=["--flag1 value1"]
```

```text
[settings]
...

[conf]
# Appending values into the existing list
user.myconf.build:ldflags+=["--flag2 value2"]

# Unsetting the existing value (it'd be like we define it as an empty value)
user.myconf.build:cflags=!

# Prepending values into the existing list
user.myconf.build:ldflags=+["--prefix prefix-value"]
```

Running, for instance, **conan install . -pr myprofile**, the configuration output will be something like:

```bash
...
Configuration:
[settings]
[options]
[tool_requires]
[conf]
user.myconf.build:cflags=!
user.myconf.build:ldflags=['--prefix prefix-value', '--flag1 value1', '--flag2 value2']
...
```

#### SEE ALSO
- This section allows to use patterns to limit which packages are affected by the confs. See [this section](#reference-config-files-profile-patterns) for more details.

<a id="reference-config-files-profiles-replace-requires"></a>

### [replace_requires]

#### WARNING
This feature is experimental and subject to breaking changes.
See [the Conan stability](https://docs.conan.io/2//introduction.html.md#stability) section for more information.

This section allows the user to redefine requires of recipes. This can be useful when a package can be changed by a similar one like zlib and zlibng.
It is also useful to solve conflicts, or to replace some dependencies by system alternatives wrapped in another Conan package recipe.

References listed under this section work as a **literal replacement of requires in recipes**, and is done as the very first step before any other processing
of recipe requirements, without processing them or checking for conflicts.

As an example, we could define zlibng as a replacement for the typical 

```text
[replace_requires]
zlib/*: zlibng/*
```

Using the `*` pattern for the `zlibng` reference means that `zlib` will be replaced by the exact same version of `zlibng`.

Other examples are:

```text
[replace_requires]
# To override dep/[>=1.0 <2] in recipes to a specific version dep/1.1)
dep/*: dep/1.1
# To override a dep/1.3 in recipes to dep/1.3@system
dep/*: dep/*@system
# To override every dep requirement in recipes to a specific version range
dep/*: dep/[>=1 <2]
# To override "dep/1.3@comp/stable" in recipes to the same version with other user but same channel
dep/*@*/*: dep/*@system/*
# To replace exact reference in recipes by the same one in the system
dep/1.1: dep/1.1@system
# To replace dep/[>=1.0 <2]@comp version range in recipes by 1.1 version in stable channel
dep/1.1@*: dep/1.1@*/stable
```

When composing multiple profiles (e.g., `-pr=base -pr=override`), it is possible to unset replacement rules defined in earlier profiles using the `!` marker as the replacement target:

```text
[replace_requires]
# Remove a specific replacement rule inherited from a base profile
# The "zlib/*" expression must match exactly the previous rule, it will not invalidate a "zlib/1.3.1" rule.
zlib/*: !
# Clear all replacement rules
*: !
```

#### NOTE
**Best practices**

- Please make rational use of this feature. It is not a versioning mechanism and is not intended to replace actual requires in recipes.
- The usage of this feature is intended for **temporarily** solving conflicts or replacing a specific dependency by a system one in some cross-build scenarios.

#### IMPORTANT
`[replace_requires]` does **not** apply to requires that are explicitly specified via command-line arguments (e.g., `conan install --requires=dep/1.0` or `conan create`). CLI-specified requirements have higher priority and are never replaced. Transitive dependencies of CLI-specified requires can still be replaced.

<a id="reference-config-files-profiles-replace-tool-requires"></a>

### [replace_tool_requires]

#### WARNING
This feature is experimental and subject to breaking changes.
See [the Conan stability](https://docs.conan.io/2//introduction.html.md#stability) section for more information.

Same usage as the replace_requires section but in this case for tool_requires.

```text
[replace_tool_requires]
cmake/*: cmake/3.25.2
```

In this case, whatever version of `cmake` declared in recipes, will be replaced by the reference cmake/3.25.2.

Replacement rules can be unset in profile composition using `!` as the replacement target:

```text
[replace_tool_requires]
# Remove a specific rule from a base profile
# The "cmake/*" expression must match exactly the previous rule, it will not invalidate a "cmake/3.30" rule.
cmake/*: !
# Clear all tool replacement rules
*: !
```

#### NOTE
* This section should be added to the profile whose context is the one that requires the tool, i.e., if the
  tool is required in the host context, then it should be added to the host profile, so that the requirement
  itself can be replaced. For example, if a `zlib` recipe in the host context has a `tool_requires("cmake/xxx")`, a `replace_tool_requires` in the **host profile** will replace it.
* If what you want to replace are transitive dependencies of the tools that live inside `tool_requires` packages, those live in the **build context**. To replace them, you must add the replacements to the **build profile**. Both `[replace_requires]` and `[replace_tool_requires]` in the build profile will affect the build context in the same way, replacing `requires` and `tool_requires` of the tools themselves.

#### IMPORTANT
`[replace_tool_requires]` does **not** apply to requires that are explicitly specified via command-line arguments (e.g., `conan install --tool-requires=dep/1.0` or `conan create`). CLI-specified requirements have higher priority and are never replaced. Transitive dependencies of CLI-specified requires can still be replaced.

<a id="reference-config-files-profiles-platform-requires"></a>

### [platform_requires]

#### WARNING
This feature is experimental and subject to breaking changes.
See [the Conan stability](https://docs.conan.io/2//introduction.html.md#stability) section for more information.

This section allows the user to redefine requires of recipes replacing them with platform-provided dependencies,
which means that Conan will not try to download the
reference or look for it in the cache and will assume that it is installed in your system and ready to be used.

For example, if the `zlib/1.3.1` library is already installed in your system or it is part of your build toolchain and you would like Conan to use it,
you could specify so as:

```text
[platform_requires]
zlib/1.3.1
```

#### IMPORTANT
In practice, it can be very challenging to achieve a full transparent replacement of a package in the Conan dependency graph
by a system or platform installed alternative, because there can be information missing for correctly using it, like dependencies
and transitive dependencies, build-system integrations specifics such as the CMake `find_package()` file names or CMake targets,
etc.

That means that it might not be possible to achieve such a `[platform_requires]` for regular packages, as opposed to the
`[platform_tool_requires]` because for many tools, it is enough that they are just in the system path. But this is not the case
for regular libraries.

For these cases, the recommendation is to write a “wrapper” Conan `conanfile.py` recipe that models the platform installed
dependency, defines if it has dependencies and provides the necessary information to consume it in its `package_info()` method.
Then, use the `[replace_requires]` feature instead.

A recipe revision can also be used in the reference, to help keep track of changes in the system dependency,
but it is not mandatory, and Conan will use the default `#platform` revision if not specified.

```text
[platform_requires]
zlib/1.3.1#myrevision
```

This will ensure that lockfiles are able to track changes over this platform dependency,
and it will be easier to specify when the system dependency has changed and needs to be re-evaluated.

<a id="reference-config-files-profiles-platform-tool-requires"></a>

### [platform_tool_requires]

#### WARNING
This feature is experimental and subject to breaking changes.
See [the Conan stability](https://docs.conan.io/2//introduction.html.md#stability) section for more information.

Same usage as the platform_requires section but in this case for tool_requires such as cmake, meson…

As an example, let’s say you have already installed `cmake==3.24.2` in your system:

```bash
$ cmake --version
cmake version 3.24.2

CMake suite maintained and supported by Kitware (kitware.com/cmake).
```

And you have in your recipe (or the transitive dependencies) declared a **tool_requires**, i.e., something like this:

```python
from conan import ConanFile

class PkgConan(ConanFile):
    name = "pkg"
    version = "2.0"
    # ....

    # Exact version
    def build_requirements(self):
        self.tool_requires("cmake/3.24.2")

    # Or even version ranges
    def build_requirements(self):
        self.tool_requires("cmake/[>=3.20.0]")
```

Given this situation, it could make sense to want to use your already installed CMake version, so it’s enough to declare
it as a `platform_tool_requires` in your profile:

```text
...

[platform_tool_requires]
cmake/3.24.2
```

Whenever you want to create the package, you’ll see that build requirement is already satisfied because of the platform tool
declaration:

```bash
$ conan create . -pr myprofile --build=missing
...
-------- Computing dependency graph --------
Graph root
    virtual
Requirements
    pkg/2.0#3488ec5c2829b44387152a6c4b013767 - Cache
Build requirements
    cmake/3.24.2#platform - Platform

-------- Computing necessary packages --------

-------- Computing necessary packages --------
pkg/2.0: Forced build from source
Requirements
    pkg/2.0#3488ec5c2829b44387152a6c4b013767:20496b332552131b67fb99bf425f95f64d0d0818 - Build
Build requirements
    cmake/3.24.2#platform - Platform
```

A recipe revision can also be used in the reference, to help keep track of changes in the system dependency,
but it is not mandatory, and Conan will use the default `#platform` revision if not specified.

```text
[platform_tool_requires]
cmake/3.24.2#myrevision
```

This will ensure that lockfiles are able to track changes over this platform dependency,
and it will be easier to specify when the system dependency has changed and needs to be re-evaluated.

#### NOTE
* If the `platform_tool_requires` declared **does not make a strict match** with the `tool_requires` one (version or
  version range), then Conan will try to bring them remotely or locally as usual.
* This section should be added to the profile whose context is the one that requires the tool, i.e., if the
  tool is required in the host context, then it should be added to the host profile, so that the requirement
  itself can be replaced by the platform one.

<a id="reference-config-files-profiles-rendering"></a>

## Profile rendering

The profiles are rendered as **jinja2** templates by default. When Conan loads a profile, it immediately parses and
renders the template, which must result in a standard text profile.

Some of the capabilities of the profile templates are:

- Using the platform information, like obtaining the current OS, is possible because the
  Python `platform` module is added to the render context:
  ```jinja
  [settings]
  os = {{ {"Darwin": "Macos"}.get(platform.system(), platform.system()) }}
  ```
- Reading environment variables can be done because the Python `os` module is added
  to the render context:
  ```jinja
  [settings]
  build_type = {{ os.getenv("MY_BUILD_TYPE") }}
  ```
- Defining your own variables and using them in the profile:
  ```jinja
  {% set os = "FreeBSD" %}
  {% set clang = "my/path/to/clang" %}

  [settings]
  os = {{ os }}

  [conf]
  tools.build:compiler_executables={'c': '{{ clang }}', 'cpp': '{{ clang + '++' }}' }
  ```
- Joining and defining paths, including referencing the current profile directory. For
  example, defining a toolchain whose file is located besides the profile can be done.
  Besides the `os` Python module, the variable `profile_dir` pointing to the current profile
  folder is added to the context.
  ```jinja
  [conf]
  tools.cmake.cmaketoolchain:toolchain_file = {{ os.path.join(profile_dir, "toolchain.cmake") }}
  ```
- Getting settings from a filename, including referencing the current profile name. For
  example, defining a generic profile which is configured according to its file name.
  The variable `profile_name` pointing to the current profile file name is added to the context.
  ```jinja
  {% set os, arch, compiler, compiler_version = profile_name.split('-') %}
  [settings]
  os={{ os }}
  arch={{ arch }}
  compiler={{ compiler }}
  compiler.version={{ compiler_version }}
  ```

  If you want to use the original profile file name, instead of the current profile name, for example,
  if the current profile file is called `common`, and another profile called `windows-arm` was doing
  an `include(common)`, then the `root_profile_name` variable will be equal to `windows-arm`, even
  inside the `common` file.
- Executing external commands and using their output. The `subprocess` module is added to the
  context, so you can use it to execute commands and capture their output.
  Note that Conan startup times for some commands can be affected if the command takes a long
  time to execute, so use this feature with caution.
  For example, to get the version of the installed compiler (But you should use
  `detect_api.detect_default_compiler()` instead for this case):
  ```jinja
  {% set version = subprocess.check_output(['clang++', "-dumpversion"]).strip() %}
  [settings]
  compiler.version={{ version }}
  ```
- Branching based on the context that the profile is being rendered for.
  The `context` variable is injected and can take the values `host`, `build` or be `None`.
  For example, you can define different settings for the host and build contexts
  without having to create two different profiles:
  ```jinja
  [settings]
  os=Linux
  compiler=gcc
  compiler.version=12
  {% if context == "host" %}
  compiler.cppstd=gnu17
  {% else %}
  compiler.cppstd=gnu20
  {% endif %}
  ```
- Including or importing other files from `profiles` folder:
  ```jinja
  {% set a = "Debug" %}
  ```

  ```jinja
  {% import "profile_vars" as vars %}
  [settings]
  build_type = {{ vars.a }}
  ```

  When including or importing other files using relative paths, the Jinja renderer uses the base path of the
  current profile file as the first location to look for. If this search fails, the Jinja renderer
  will also start looking in the Conan home profiles folder (typically in `<userhome>/.conan2/profiles`).
- Any other feature supported by *jinja2* is possible: for loops, if-else, etc. This
  would be useful to define custom per-package settings or options for multiple packages
  in a large dependency graph.

As a summary, this is the rendering context for profile files (all the items Conan injects):

- `platform`, `os`, `subprocess`: The Python `platform`, `os` and `subprocess` modules
- `profile_dir`: The folder where the current profile file is located
- `profile_name`: The current profile file filename
- `root_profile_name`: The initial profile that was loaded. It is different of the current `profile_name` when there is an `include(otherprofile)`
- `conan_version`: The current Conan version
- `detect_api`: This is a full automatic detection API, see below
- `context`: The current Conan context, can be `host`, `build` or be `None`

<a id="reference-config-files-profiles-detect-api"></a>

**Profile Rendering with \`\`detect_api\`\`**

#### WARNING
**Stability Guarantees**: The detect_api, similar to `conan profile detect`, does not
offer strong stability guarantees.

**Usage Recommendations**: The detect_api is not a regular API meant for creating new
commands or similar functionalities. While auto-detection can be convenient, it’s not
the recommended approach for all scenarios. This API is internal to Conan and is only
exposed for profile and *global.conf* rendering. It’s advised to use it judiciously.

Conan also injects `detect_api` to the jinja rendering context. With it, it’s
possible to use Conan’s auto-detection capabilities directly within Jinja profile
templates. This provides a way to dynamically determine certain settings based on the
environment.

`detect_api` can be invoked within the Jinja template of a profile. For instance, to
detect the operating system and architecture, you can use:

```jinja
[settings]
os={{detect_api.detect_os()}}
arch={{detect_api.detect_arch()}}
```

Similarly, for more advanced detections like determining the compiler, its version, and
the associated runtime, you can use:

```jinja
{% set compiler, version, compiler_exe = detect_api.detect_default_compiler() %}
{% set runtime, _ = detect_api.default_msvc_runtime(compiler) %}
[settings]
compiler={{compiler}}
compiler.version={{detect_api.default_compiler_version(compiler, version)}}
compiler.runtime={{runtime}}
compiler.cppstd={{detect_api.default_cppstd(compiler, version)}}
compiler.libcxx={{detect_api.detect_libcxx(compiler, version, compiler_exe)}}
```

**detect_api reference**:

> - `detect_os()`: returns operating system as a string (e.g., “Windows”, “Macos”).
> - `detect_arch()`: returns system architecture as a string (e.g., “x86_64”, “armv8”).
> - `detect_libc(ldd="/usr/bin/ldd")`: **experimental** returns a tuple with the name (e.g., “gnu”, “musl”) and version (e.g., “2.39”, “1.2.4”) of the C library.
> - `detect_libcxx(compiler, version, compiler_exe=None)`: returns C++ standard library as a string (e.g., “libstdc++”, “libc++”).
> - `default_msvc_runtime(compiler)`: returns tuple with runtime (e.g., “dynamic”) and its version (e.g., “v143”).
> - `default_cppstd(compiler, compiler_version)`: returns default C++ standard as a string (e.g., “gnu14”).
> - `detect_default_compiler()`: returns tuple with compiler name (e.g., “gcc”), its version and the executable path.
> - `detect_msvc_update(version)`: returns the MSVC update version as a string (e.g.,
>   “12” for VS 17.12.1). Note that in Conan profiles, the `compiler.update` setting accepts
>   values from 0 to 10. To convert the result from `detect_msvc_update` into the
>   format required by profiles, you can do something like this:
>   > Example:
>   > ```jinja
>   > ...
>   > [settings]
>   > compiler=msvc
>   > compiler=194 # for msvc toolset starting in 14.40 (VS 17.10)
>   > # If we are using VS 17.12 we convert 12 to 2 so it's 194 with update 2
>   > compiler.update = "{{ (detect_api.detect_msvc_update(version) | int) % 10 }}"
>   > ...
>   > ```
> - `default_msvc_ide_version(version)`: returns MSVC IDE version as a string (e.g., “17”).
> - `default_compiler_version(compiler, version)`: returns the default version that  Conan uses in profiles,
>   typically dropping some of the minor or patch digits, that do not affect binary compatibility.
> - `detect_gcc_compiler(compiler_exe="gcc")`: Return the tuple (‘gcc’, version, executable) for `gcc`
> - `detect_intel_compiler(compiler_exe="icx")`: Return the tuple (‘intel-cc’, version, executable) for `intel-cc`
> - `detect_suncc_compiler(compiler_exe="cc")`: Return the tuple (‘sun-cc’, version, executable) for `sun-cc`
> - `detect_clang_compiler(compiler_exe="clang")`: Return the tuple (‘clang’|’apple-clang’, version, executable) for `clang` or `apple-clang`.
> - `detect_msvc_compiler()`: Detect the compiler (‘msvc’, version, None) default version of the latest VS IDE installed
> - `detect_cl_compiler(compiler_exe="cl")`: Detect the compiler (‘msvc’, version, executable) for the `cl.exe` compiler
> - `detect_emcc_compiler(compiler_exe="emcc")`: Return the tuple (‘emcc’, version, executable) for the `emcc` Emscripten compiler
> - `detect_sdk_version(sdk)`: Detect the Apple SDK version (`None` for non Apple platforms), for the given `sdk`. Equivalent to `xcrun -sdk {sdk} --show-sdk-version`

<a id="reference-config-files-profile-patterns"></a>

## Profile patterns

Profiles (and everywhere where a setting or option is defined) also support patterns definition, so you can override some settings, configuration variables, etc.
for some specific packages:

```text
[settings]
# Only for zlib
zlib/*:compiler=clang
zlib/*:compiler.version=3.5
zlib/*:compiler.libcxx=libstdc++11

# For the all the dependency tree
compiler=gcc
compiler.version=4.9
compiler.libcxx=libstdc++11

[options]
# shared=True option only for zlib package
zlib/*:shared=True

[buildenv]
# For the all the dependency tree
*:MYVAR=my_var

[conf]
# Only for zlib
zlib/*:tools.build:compiler_executables={'c': '/usr/bin/clang', 'cpp': '/usr/bin/clang++'}
```

Your build tool will locate **clang** compiler only for the **zlib** package and **gcc** (default one)
for the rest of your dependency tree.

#### IMPORTANT
Putting only `zlib:` is deprecated behaviour and won’t work, you have to always put a pattern-like expression, e.g., `zlib*:`,
`zlib/*:`, `zlib/1.*:`, etc.

They accept patterns too, like `-s *@myuser/*`, which means that packages that have the username “myuser” will use
clang 3.5 as compiler, and gcc otherwise:

```text
[settings]
*@myuser/*:compiler=clang
*@myuser/*:compiler.version=3.5
*@myuser/*:compiler.libcxx=libstdc++11
compiler=gcc
compiler.version=4.9
compiler.libcxx=libstdc++11
```

Also `&` can be specified as the package name. It will apply only to the consumer conanfile (.py or .txt).
This is a special case because the consumer conanfile might not declare a `name` so it would be impossible to reference it.

```text
[settings]
&:compiler=gcc
&:compiler.version=4.9
&:compiler.libcxx=libstdc++11
```

Partial matches are also supported, so you can define a pattern like `zlib*` to match all the zlib like libraries,
so it will match everything starting with zlib, like `zlib`, `zlibng`, `zlib/1.2.8@user/channel`, etc.

```text
[settings]
zlib*:compiler=clang
zlib*:compiler.version=3.5
zlib*:compiler.libcxx=libstdc++11
```

If a pattern begins with `!`, it’s considered an exclusion pattern, meaning that it will match
everything except the specified pattern. This also works for the consumer `&` pattern mentioned above.

Care must be taken when using exclusion patterns, as they can lead to unexpected results if not used carefully.

For example, to define a `shared=True` option for all packages except to zlib, you can use:

```text
[options]
!zlib/*:shared=True
```

From Conan 2.27 it is also possible to do an exclusion of multiple patterns, with the `!(<pattern1>|<pattern2>)`
**experimental** syntax, exclusively for `[tool_requires]` (it will not work in other sections), like:

```text
[tool_requires]
!(gcc/*|ninja/*): cmake/3.20
```

That means that all packages except `gcc` and `ninja` will get a tool-requires to `cmake`. This feature
is intended to avoid circular dependencies in the build-context (try to avoid abusing it for other use cases),
that is, it should be mostly in the “build” profile, but likely not in the “host” profile.

Note that for the `msvc` compiler, the `compiler.runtime_type` setting is  automatically initialized from
the `build_type` setting value by the `profile.py` plugin, as it is a good default for the vast majority
of cases. That means that a user defining `-s build_type=MinSizeRel` will by default get a
`compiler.runtime_type=Release` value for `msvc` compiler.
However, this is not the case for package specific settings, and the `profile.py` plugin won’t automatically
define the `compiler.runtime_type` for `msvc`, so doing something like `mydep/*:build_type=<build_type>`
doesn’t automatically define `mydep/*:compiler.runtime_type`.

In some circumstances it might be desired to undefine some specific package settings, assuming that such a setting
allows to be undefined. For this case, the syntax `~` can be used as:

```text
[settings]
build_type=Release
mypkg/*:build_type=~
```

This syntax will define `build_type=Release` for all packages, except for `mypkg` (any version), that will leave
`build_type` undefined, as it was never assigned a value. In recipe code that means that `self.settings.build_type`
will be `None`.

## Profile includes

You can include other profile files using the `include()` statement. The path can be relative
to the current profile, absolute, or a profile name from the default profile location in the local cache.

The `include()` statement has to be at the top of the profile file:

```text
[settings]
compiler=gcc
compiler.version=4.9
compiler.libcxx=libstdc++11
```

```text
include(gcc_49)

[settings]
zlib/*:compiler=clang
zlib/*:compiler.version=3.5
zlib/*:compiler.libcxx=libstdc++11
```

#### NOTE
Cache profiles have more priority than the ones in the current working
directory, so if you have a profile named `myprofile` in the cache, it will
be used instead of the one in the current working directory.

To use the profile in the current working directory, you can use:

- `-pr ./myprofile` option in the command line or
- `include(./myprofile)` in the profile file itself.

The final result of using *myprofile* is:

```text
[settings]
compiler=gcc
compiler.libcxx=libstdc++11
compiler.version=4.9
zlib/*:compiler=clang
zlib/*:compiler.libcxx=libstdc++11
zlib/*:compiler.version=3.5
```

#### SEE ALSO
- [How to compose two or more profiles](https://docs.conan.io/2//reference/commands/install.html.md#reference-commands-install-composition)
